# CarND-MPC-Project

./: .codecov.yml  .travis.yml  CMakeLists.txt  README.md  build.cmake
.circleci/: config.yml
cmake/: CodeCoverage.cmake  EnableDockerBuild.cmake  EnableLocalBuild.cmake  LocalBuild.cmake  docker.cmake  local.cmake
data/: drive.csv  plot.gnuplot
docker/: CMakeLists.txt  Dockerfile
src/: CMakeLists.txt  MPC.cpp  application.h  compose.h  config.h  control.h  drive.cpp  drive.h  io.cpp  io.h  main.cpp  model.cpp  model.h  model_index.cpp  model_index.h  model_output.h  mpc.cpp  mpc.h  polynomial.h  processor.cpp  processor.h  protocol.cpp  solve.h  solve_traits.h  state.h  stream_holder.h  util.h
test/: CMakeLists.txt  io.cpp  polynomial.cpp  test_io.cpp  test_model.cpp  test_mpc.cpp  test_polynomial.cpp  test_solve.cpp
